fixed gap between items of the form UX #2

--- a/demo-page/styles.scss
+++ b/demo-page/styles.scss
@@ -91,5 +91,12 @@
     align-items: center;
     gap: 10px;
     padding: 2px;
+    pointer-events: none; 
+  }
+
+  &__description,
+  &__input {
+    pointer-events: auto;
+    cursor: pointer;
   }
 }
